Limit openconfig autocli, and emove restconfig from configure files Full openconfig cli consumes a lot of memory, just limit to top-level system+interfaces Since CLICON_BACKEND_RESTCONF_PROCESS=true, restconf config should be in datastore, ie startup/running

--- a/hello/src/Makefile.in
+++ b/hello/src/Makefile.in
@@ -74,11 +74,11 @@ clean:
 distclean: clean
 	rm -f Makefile *~ .depend
 
-install: $(CLISPECS) $(APPNAME).xml autocli.xml restconf.xml
+install: $(CLISPECS) $(APPNAME).xml autocli.xml
 	install -d -m 0755 $(DESTDIR)$(sysconfdir)/clixon
 	install -d -m 0755 $(DESTDIR)$(sysconfdir)/clixon/$(APPNAME)
 	install -m 0644 $(APPNAME).xml $(DESTDIR)$(sysconfdir)/clixon
-	install -m 0644 autocli.xml restconf.xml $(DESTDIR)$(sysconfdir)/clixon/$(APPNAME)
+	install -m 0644 autocli.xml $(DESTDIR)$(sysconfdir)/clixon/$(APPNAME)
 	install -d -m 0755 $(DESTDIR)$(libdir)/$(APPNAME)
 	install -d -m 0755 $(DESTDIR)$(libdir)/$(APPNAME)/clispec
 	install -m 0644 $(CLISPECS) $(DESTDIR)$(libdir)/$(APPNAME)/clispec
