--- a/wifi/src/wifi.xml.in
+++ b/wifi/src/wifi.xml.in
@@ -13,6 +13,7 @@
   <CLICON_BACKEND_DIR>@LIBDIR@/wifi/backend</CLICON_BACKEND_DIR>
   <CLICON_SOCK>@LOCALSTATEDIR@/wifi.sock</CLICON_SOCK>
   <CLICON_BACKEND_PIDFILE>@LOCALSTATEDIR@/wifi.pidfile</CLICON_BACKEND_PIDFILE>
+  <!-- true here means restconf config is in datastore -->
   <CLICON_BACKEND_RESTCONF_PROCESS>true</CLICON_BACKEND_RESTCONF_PROCESS>
   <CLICON_XMLDB_DIR>@LOCALSTATEDIR@/wifi</CLICON_XMLDB_DIR>
   <CLICON_STARTUP_MODE>init</CLICON_STARTUP_MODE>
