--- a/hello/src/hello.xml.in
+++ b/hello/src/hello.xml.in
@@ -9,6 +9,7 @@
   <CLICON_CLISPEC_DIR>@LIBDIR@/hello/clispec</CLICON_CLISPEC_DIR>
   <CLICON_SOCK>@LOCALSTATEDIR@/hello.sock</CLICON_SOCK>
   <CLICON_BACKEND_PIDFILE>@LOCALSTATEDIR@/hello.pidfile</CLICON_BACKEND_PIDFILE>
+  <!-- true here means restconf config is in datastore -->
   <CLICON_BACKEND_RESTCONF_PROCESS>true</CLICON_BACKEND_RESTCONF_PROCESS>
   <CLICON_XMLDB_DIR>@LOCALSTATEDIR@/hello</CLICON_XMLDB_DIR>
   <CLICON_STARTUP_MODE>init</CLICON_STARTUP_MODE>
