--- a/openconfig/src/openconfig.xml.in
+++ b/openconfig/src/openconfig.xml.in
@@ -10,6 +10,7 @@
   <CLICON_CLISPEC_DIR>@LIBDIR@/openconfig/clispec</CLICON_CLISPEC_DIR>
   <CLICON_SOCK>@LOCALSTATEDIR@/openconfig.sock</CLICON_SOCK>
   <CLICON_BACKEND_PIDFILE>@LOCALSTATEDIR@/openconfig.pidfile</CLICON_BACKEND_PIDFILE>
+  <!-- true here means restconf config is in datastore -->
   <CLICON_BACKEND_RESTCONF_PROCESS>true</CLICON_BACKEND_RESTCONF_PROCESS>
   <CLICON_XMLDB_DIR>@LOCALSTATEDIR@/openconfig</CLICON_XMLDB_DIR>
   <CLICON_STARTUP_MODE>init</CLICON_STARTUP_MODE>
