--- a/hello/src/Makefile.in
+++ b/hello/src/Makefile.in
@@ -59,7 +59,17 @@ YANGSPECS	 = clixon-hello@2019-04-17.yang
 
 .PHONY: all clean depend install 
 
-all:
+# Example backend plugin
+# There may also be restconf/cli/netconf plugins which are not covered here, see
+# eg clixon main example
+PLUGIN       = $(APPNAME)_backend_plugin.so
+PLUGIN_SRC   = $(APPNAME)_backend_plugin.c
+PLUGIN_OBJ   = $(PLUGIN_SRC:%.c=%.o)
+
+all: $(PLUGIN)
+
+$(PLUGIN): $(PLUGIN_OBJ)
+	$(CC) -Wall -shared $(LDFLAGS) -o $@ -lc $< -lclixon -lclixon_backend
 
 .SUFFIXES: .c .o
 
@@ -70,23 +80,26 @@ all:
 CLISPECS = $(APPNAME)_cli.cli
 
 clean:
+	rm -f $(PLUGIN) $(PLUGIN_OBJ)
 
 distclean: clean
 	rm -f Makefile *~ .depend
 
-install: $(CLISPECS) $(APPNAME).xml autocli.xml
+install: $(CLISPECS) $(APPNAME).xml autocli.xml $(PLUGIN)
 	install -d -m 0755 $(DESTDIR)$(sysconfdir)/clixon
 	install -d -m 0755 $(DESTDIR)$(sysconfdir)/clixon/$(APPNAME)
 	install -m 0644 $(APPNAME).xml $(DESTDIR)$(sysconfdir)/clixon
 	install -m 0644 autocli.xml $(DESTDIR)$(sysconfdir)/clixon/$(APPNAME)
 	install -d -m 0755 $(DESTDIR)$(libdir)/$(APPNAME)
 	install -d -m 0755 $(DESTDIR)$(libdir)/$(APPNAME)/clispec
+	install -d -m 0755 $(DESTDIR)$(libdir)/$(APPNAME)/backend
 	install -m 0644 $(CLISPECS) $(DESTDIR)$(libdir)/$(APPNAME)/clispec
 	install -d -m 0755 $(DESTDIR)$(localstatedir)
 	install -d -m 0755 $(DESTDIR)$(localstatedir)/$(APPNAME)
 	install -m 0644 startup_db $(DESTDIR)$(localstatedir)/$(APPNAME)/
 	install -d -m 0755 $(DESTDIR)$(YANG_INSTALLDIR)
 	install -m 0644 $(YANGSPECS) $(DESTDIR)$(YANG_INSTALLDIR)
+	install -m 0644 $(INSTALLFLAGS) $(PLUGIN) $(DESTDIR)$(libdir)/$(APPNAME)/backend
 
 uninstall: 
 	rm -f $(DESTDIR)$(sysconfdir)/clixon/$(APPNAME).xml
